# OpenDocs-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  inspect_pageindex.py  main.py  pyproject.toml  requirements.txt  sources.json
app/: bootstrap.py  config.py  main.py
app/agent/: agent.py
app/api/: routes.py
app/crawler/: crawler.py  extractor.py  sitemap.py
app/docs/: sources.json
app/index/: context.py  debug_search.py  storage.py  test_tree.py  tree_builder.py  tree_search.py
app/llm/: groq_client.py
app/memory/: chat_memory.py  memory_manager.py  profile_memory.py  session_memory.py  summary_memory.py
app/pageindex_engine/: build_pageindex.py  html_to_md.py  retrieve.py  storage.py
app/static/: app.js  style.css
app/templates/: index.html
data/markdown/: documentation.work.gd.md  documentation.work.gd_.md  documentation.work.gd_developer_.md  documentation.work.gd_docs_.md  documentation.work.gd_docs_ColumnTransformer.html.md  documentation.work.gd_docs_DecisionTree.html.md  documentation.work.gd_docs_KMeans.html.md  documentation.work.gd_docs_KNN.html.md  documentation.work.gd_docs_LabelEncoder.html.md  documentation.work.gd_docs_LinearRegression.html.md  documentation.work.gd_docs_LogisticRegression.html.md  documentation.work.gd_docs_MinMaxScaler.html.md  documentation.work.gd_docs_OneHotEncoder.html.md  documentation.work.gd_docs_PCA.html.md  documentation.work.gd_docs_Pipeline.html.md  documentation.work.gd_docs_RandomForest.html.md  documentation.work.gd_docs_RidgeRegression.html.md  documentation.work.gd_docs_mse.html.md  (+162 more)
(+362 files in other folders)
