[project]
name = "opendocs-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "langchain-groq>=1.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "trafilatura>=2.0.0",
]
