[project]
name = "opendocs-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "groq>=0.37.1",
    "jinja2>=3.1.6",
    "langchain-groq>=1.1.2",
    "litellm>=1.87.0",
    "markdownify>=1.2.2",
    "pymupdf>=1.27.2.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.31",
    "requests>=2.34.2",
    "trafilatura>=2.0.0",
    "uvicorn>=0.49.0",
]
